--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 alt="" class="item-image" />
               <h3 class="item-name">iPhone 17 Promax</h3>
               <p class="item-price">44.449.000 VNĐ</p>
-              <a href=""><button>Chi tiết</button></a>
+              <a href="./pages/product.html?id=iphone17-promax"><button>Chi tiết</button></a>
             </div>
             <div class="itembox">
               <div class="product-tag">
