--- a/pages/phu_kien.html
+++ b/pages/phu_kien.html
@@ -19,6 +19,10 @@
       rel="stylesheet"
       href="../styles/NguyenKimTuyen_241230888/product.css"
     />
+    <link
+      rel="stylesheet"
+      href="../styles/LeQuyTung_241230886/fix-products.css"
+    />
     <script
       src="https://kit.fontawesome.com/9e100b4052.js"
       crossorigin="anonymous"
@@ -430,7 +434,7 @@
                     />
                   </div>
 
-                  <div class="product-name"><br /><br />Apple TV 4K 2021</div>
+                  <div class="product-name">Apple TV 4K 2021</div>
                 </a>
 
                 <div class="product-price">
@@ -456,7 +460,7 @@
                     />
                   </div>
 
-                  <div class="product-name"><br /><br />Apple TV HD 2020</div>
+                  <div class="product-name">Apple TV HD 2020</div>
                 </a>
 
                 <div class="product-price">
@@ -482,9 +486,7 @@
                     />
                   </div>
 
-                  <div class="product-name">
-                    <br /><br />Điều khiển Apple TV Remote
-                  </div>
+                  <div class="product-name">Điều khiển Apple TV Remote</div>
                 </a>
 
                 <div class="product-price">
@@ -512,7 +514,7 @@
                   </div>
 
                   <div class="product-name">
-                    <br /><br />PS5 Slim | Máy chơi game Sony PlayStation 5 Slim
+                    PS5 Slim | Máy chơi game Sony PlayStation 5 Slim
                   </div>
                 </a>
 
@@ -623,8 +625,6 @@
                   </div>
 
                   <div class="product-name">
-                    <br /><br />
-                    <br />
                     Tay Cầm Không Dây Sony DualSense CFI-ZCT1G_CFI-ZCT1G
                   </div>
                 </a>
