--- a/pages/Mac.html
+++ b/pages/Mac.html
@@ -19,6 +19,10 @@
       rel="stylesheet"
       href="../styles/NguyenKimTuyen_241230888/product.css"
     />
+    <link
+      rel="stylesheet"
+      href="../styles/LeQuyTung_241230886/fix-products.css"
+    />
     <script
       src="https://kit.fontawesome.com/9e100b4052.js"
       crossorigin="anonymous"
