--- a/pages/tintuc.html
+++ b/pages/tintuc.html
@@ -83,15 +83,21 @@
                 <li>
                   <a href="../index.html" class="menu-mobile-link">Trang chủ</a>
                 </li>
-                <li><a href="" class="menu-mobile-link">iPhone</a></li>
-                <li><a href="" class="menu-mobile-link">iPad</a></li>
-                <li><a href="" class="menu-mobile-link">Mac</a></li>
+                <li>
+                  <a href="./iphone.html" class="menu-mobile-link">iPhone</a>
+                </li>
+                <li><a href="./iPad.html" class="menu-mobile-link">iPad</a></li>
+                <li><a href="./Mac.html" class="menu-mobile-link">Mac</a></li>
                 <li>
                   <a href="../pages/watch.html" class="menu-mobile-link"
                     >Watch</a
                   >
                 </li>
-                <li><a href="../" class="menu-mobile-link">Phụ Kiện</a></li>
+                <li>
+                  <a href="./phu_kien.html" class="menu-mobile-link"
+                    >Phụ Kiện</a
+                  >
+                </li>
                 <li>
                   <a href="../pages/earphone.html" class="menu-mobile-link"
                     >Âm Thanh</a
@@ -129,13 +135,17 @@
         </div>
         <div class="header-navbar-for-desktop">
           <ul class="top-menu-not-mobile">
-            <li class="category-menu-items"><a href="">iPhone</a></li>
-            <li class="category-menu-items"><a href="">iPad</a></li>
-            <li class="category-menu-items"><a href="">Mac</a></li>
+            <li class="category-menu-items">
+              <a href="./iphone.html">iPhone</a>
+            </li>
+            <li class="category-menu-items"><a href="./iPad.html">iPad</a></li>
+            <li class="category-menu-items"><a href="./Mac.html">Mac</a></li>
             <li class="category-menu-items">
               <a href="../pages/watch.html">Watch</a>
             </li>
-            <li class="category-menu-items"><a href="">Phụ kiện</a></li>
+            <li class="category-menu-items">
+              <a href="./phu_kien.html">Phụ kiện</a>
+            </li>
             <li class="category-menu-items">
               <a href="../pages/earphone.html">Âm thanh</a>
             </li>
