--- a/pages/Mac.html
+++ b/pages/Mac.html
@@ -44,7 +44,7 @@
       <header>
         <div class="higher-header">
           <div class="header-logo">
-            <a href=""
+            <a href="../index.html"
               ><img
                 class="header-logo"
                 src="../assets/images/NguyenDucVu_241230896/header_image/page_logo.png"
@@ -81,20 +81,46 @@
             <i class="fa-solid fa-bars menu-btn" style="color: #ffffff"></i>
             <div class="drop-down-menu-for-mobile">
               <ul class="menu-mobile">
-                <li><a href="" class="menu-mobile-link">Trang chủ</a></li>
-                <li><a href="" class="menu-mobile-link">iPhone</a></li>
-                <li><a href="iPad.html" class="menu-mobile-link">iPad</a></li>
-                <li><a href="Mac.html" class="menu-mobile-link">Mac</a></li>
-                <li><a href="watch.html" class="menu-mobile-link">Watch</a></li>
                 <li>
-                  <a href="phu_kien.html" class="menu-mobile-link">Phụ Kiện</a>
+                  <a href="../index.html" class="menu-mobile-link">Trang chủ</a>
                 </li>
-                <li><a href="" class="menu-mobile-link">Âm Thanh</a></li>
-                <li><a href="" class="menu-mobile-link">Camera</a></li>
-                <li><a href="" class="menu-mobile-link">Gia Dụng</a></li>
-                <li><a href="" class="menu-mobile-link">Tin Tức</a></li>
                 <li>
-                  <a href="../pages/login.html" class="menu-mobile-link"
+                  <a href="./iphone.html" class="menu-mobile-link">iPhone</a>
+                </li>
+                <li><a href="./iPad.html" class="menu-mobile-link">iPad</a></li>
+                <li><a href="./Mac.html" class="menu-mobile-link">Mac</a></li>
+                <li>
+                  <a href="../pages/watch.html" class="menu-mobile-link"
+                    >Watch</a
+                  >
+                </li>
+                <li>
+                  <a href="./phu_kien.html" class="menu-mobile-link"
+                    >Phụ Kiện</a
+                  >
+                </li>
+                <li>
+                  <a href="../pages/earphone.html" class="menu-mobile-link"
+                    >Âm Thanh</a
+                  >
+                </li>
+                <li>
+                  <a href="../pages/camera.html" class="menu-mobile-link"
+                    >Camera</a
+                  >
+                </li>
+                <li>
+                  <a href="../pages/giadung.html" class="menu-mobile-link"
+                    >Gia Dụng</a
+                  >
+                </li>
+                <li>
+                  <a href="../pages/tintuc.html" class="menu-mobile-link"
+                    >Tin Tức</a
+                  >
+                </li>
+                <li>
+                  <a href="./pages/login.html" class="menu-mobile-link"
                     >Đăng Nhập</a
                   >
                 </li>
@@ -110,17 +136,29 @@
         </div>
         <div class="header-navbar-for-desktop">
           <ul class="top-menu-not-mobile">
-            <li class="category-menu-items"><a href="">iPhone</a></li>
-            <li class="category-menu-items"><a href="iPad.html">iPad</a></li>
-            <li class="category-menu-items"><a href="Mac.html">Mac</a></li>
-            <li class="category-menu-items"><a href="watch.html">Watch</a></li>
             <li class="category-menu-items">
-              <a href="phu_kien.html">Phụ kiện</a>
+              <a href="./iphone.html">iPhone</a>
             </li>
-            <li class="category-menu-items"><a href="">Âm thanh</a></li>
-            <li class="category-menu-items"><a href="">Camera</a></li>
-            <li class="category-menu-items"><a href="">Gia dụng</a></li>
-            <li class="category-menu-items"><a href="">Tin tức</a></li>
+            <li class="category-menu-items"><a href="./iPad.html">iPad</a></li>
+            <li class="category-menu-items"><a href="./Mac.html">Mac</a></li>
+            <li class="category-menu-items">
+              <a href="../pages/watch.html">Watch</a>
+            </li>
+            <li class="category-menu-items">
+              <a href="./phu_kien.html">Phụ kiện</a>
+            </li>
+            <li class="category-menu-items">
+              <a href="../pages/earphone.html">Âm thanh</a>
+            </li>
+            <li class="category-menu-items">
+              <a href="../pages/camera.html">Camera</a>
+            </li>
+            <li class="category-menu-items">
+              <a href="../pages/giadung.html">Gia dụng</a>
+            </li>
+            <li class="category-menu-items">
+              <a href="../pages/tintuc.html">Tin tức</a>
+            </li>
           </ul>
         </div>
       </header>
