--- a/pages/phu_kien.html
+++ b/pages/phu_kien.html
@@ -44,7 +44,7 @@
       <header>
         <div class="higher-header">
           <div class="header-logo">
-            <a href=""
+            <a href="../index.html"
               ><img
                 class="header-logo"
                 src="../assets/images/NguyenDucVu_241230896/header_image/page_logo.png"
@@ -81,25 +81,51 @@
             <i class="fa-solid fa-bars menu-btn" style="color: #ffffff"></i>
             <div class="drop-down-menu-for-mobile">
               <ul class="menu-mobile">
-                <li><a href="" class="menu-mobile-link">Trang chủ</a></li>
-                <li><a href="" class="menu-mobile-link">iPhone</a></li>
-                <li><a href="iPad.html" class="menu-mobile-link">iPad</a></li>
-                <li><a href="Mac.html" class="menu-mobile-link">Mac</a></li>
-                <li><a href="watch.html" class="menu-mobile-link">Watch</a></li>
                 <li>
-                  <a href="phu_kien.html" class="menu-mobile-link">Phụ Kiện</a>
+                  <a href="../index.html" class="menu-mobile-link">Trang chủ</a>
                 </li>
-                <li><a href="" class="menu-mobile-link">Âm Thanh</a></li>
-                <li><a href="" class="menu-mobile-link">Camera</a></li>
-                <li><a href="" class="menu-mobile-link">Gia Dụng</a></li>
-                <li><a href="" class="menu-mobile-link">Tin Tức</a></li>
                 <li>
-                  <a href="../pages/login.html" class="menu-mobile-link"
+                  <a href="./iphone.html" class="menu-mobile-link">iPhone</a>
+                </li>
+                <li><a href="./iPad.html" class="menu-mobile-link">iPad</a></li>
+                <li><a href="./Mac.html" class="menu-mobile-link">Mac</a></li>
+                <li>
+                  <a href="../pages/watch.html" class="menu-mobile-link"
+                    >Watch</a
+                  >
+                </li>
+                <li>
+                  <a href="./phu_kien.html" class="menu-mobile-link"
+                    >Phụ Kiện</a
+                  >
+                </li>
+                <li>
+                  <a href="../pages/earphone.html" class="menu-mobile-link"
+                    >Âm Thanh</a
+                  >
+                </li>
+                <li>
+                  <a href="../pages/camera.html" class="menu-mobile-link"
+                    >Camera</a
+                  >
+                </li>
+                <li>
+                  <a href="../pages/giadung.html" class="menu-mobile-link"
+                    >Gia Dụng</a
+                  >
+                </li>
+                <li>
+                  <a href="../pages/tintuc.html" class="menu-mobile-link"
+                    >Tin Tức</a
+                  >
+                </li>
+                <li>
+                  <a href="./pages/login.html" class="menu-mobile-link"
                     >Đăng Nhập</a
                   >
                 </li>
                 <li>
-                  <a href="../pages/register.html" class="menu-mobile-link"
+                  <a href="./pages/register.html" class="menu-mobile-link"
                     >Đăng Ký</a
                   >
                 </li>
@@ -110,76 +136,32 @@
         </div>
         <div class="header-navbar-for-desktop">
           <ul class="top-menu-not-mobile">
-            <li class="category-menu-items"><a href="">iPhone</a></li>
-            <li class="category-menu-items"><a href="iPad.html">iPad</a></li>
-            <li class="category-menu-items"><a href="Mac.html">Mac</a></li>
-            <li class="category-menu-items"><a href="watch.html">Watch</a></li>
             <li class="category-menu-items">
-              <a href="phu_kien.html">Phụ kiện</a>
+              <a href="./iphone.html">iPhone</a>
             </li>
-            <li class="category-menu-items"><a href="">Âm thanh</a></li>
-            <li class="category-menu-items"><a href="">Camera</a></li>
-            <li class="category-menu-items"><a href="">Gia dụng</a></li>
-            <li class="category-menu-items"><a href="">Tin tức</a></li>
+            <li class="category-menu-items"><a href="./iPad.html">iPad</a></li>
+            <li class="category-menu-items"><a href="./Mac.html">Mac</a></li>
+            <li class="category-menu-items">
+              <a href="../pages/watch.html">Watch</a>
+            </li>
+            <li class="category-menu-items">
+              <a href="./phu_kien.html">Phụ kiện</a>
+            </li>
+            <li class="category-menu-items">
+              <a href="../pages/earphone.html">Âm thanh</a>
+            </li>
+            <li class="category-menu-items">
+              <a href="../pages/camera.html">Camera</a>
+            </li>
+            <li class="category-menu-items">
+              <a href="../pages/giadung.html">Gia dụng</a>
+            </li>
+            <li class="category-menu-items">
+              <a href="../pages/tintuc.html">Tin tức</a>
+            </li>
           </ul>
         </div>
       </header>
-      <!-- This is end of header -->
-      <div class="wrapper-page-content">
-        <div class="carousel-container">
-          <div class="carousel-wrapper">
-            <div id="carousel" class="carousel">
-              <div id="slides" class="slides">
-                <a href="../pages/iPhone.html" target="">
-                  <img
-                    src="../assets/images/NguyenKimTuyen_241230888/Carousel_banner_images/Phu_kien/Danh mục.jpg"
-                    alt="Khám phá công nghệ AI"
-                  />
-                </a>
-                <a href="../pages/iPhone.html" target="">
-                  <img
-                    src="../assets/images/NguyenKimTuyen_241230888/Carousel_banner_images/Phu_kien/danh mục-phụ kiện bổ sung_Danh mục copy 2.png"
-                    alt="Tương lai của lập trình web"
-                  />
-                </a>
-                <a href="../pages/iPhone.html" target="">
-                  <img
-                    src="../assets/images/NguyenKimTuyen_241230888/Carousel_banner_images/Phu_kien/danh mục-phụ kiện bổ sung_Danh mục copy 4.png"
-                    alt="Thiết kế giao diện tối giản"
-                  />
-                </a>
-                <a href="../pages/iPad.html" target="">
-                  <img
-                    src="../assets/images/NguyenKimTuyen_241230888/Carousel_banner_images/Phu_kien/danh mục-phụ kiện bổ sung_Danh mục copy.png"
-                    alt="Phân tích dữ liệu lớn"
-                  />
-                </a>
-                <a href="../pages/Mac.html" target="">
-                  <img
-                    src="../assets/images/NguyenKimTuyen_241230888/Carousel_banner_images/Phu_kien/danh mục-phụ kiện bổ sung_Danh mục.png"
-                    alt="Phân tích dữ liệu lớn"
-                  />
-                </a>
-                <a href="../pages/watch.html" target="">
-                  <img
-                    src="../assets/images/NguyenKimTuyen_241230888/Carousel_banner_images/Phu_kien/danh mục-PKBS_Danh mục copy.png"
-                    alt="Phân tích dữ liệu lớn"
-                  />
-                </a>
-                <a href="../pages/PhuKien.html" target="">
-                  <img
-                    src="../assets/images/NguyenKimTuyen_241230888/Carousel_banner_images/Phu_kien/danh mục-PKBS_Danh mục.png"
-                    alt="Phân tích dữ liệu lớn"
-                  />
-                </a>
-              </div>
-
-              <button id="prev" class="ctrl-btn prev">⟨</button>
-              <button id="next" class="ctrl-btn next">⟩</button>
-              <div id="dots" class="dots"></div>
-            </div>
-          </div>
-        </div>
         <!-- Code vao day -->
         <main>
           <!-- san pham  -->
