feat(iPhone): create iphone page and data

--- a/pages/iphone.html
+++ b/pages/iphone.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="../styles/NguyenDucVu_241230896/header_and_footer.css" />
     <link rel="stylesheet" href="../styles/NguyenDucVu_241230896/carousel_banner.css" />
     <link rel="stylesheet" href="../styles/NguyenDucVu_241230896/main_content.css" />
+    <link rel="stylesheet" href="../styles/NguyenDucVu_241230896/iphone.css">
     <script src="https://kit.fontawesome.com/9e100b4052.js" crossorigin="anonymous"></script>
     <script src="../js/header_and_footer.js" defer></script>
     <script src="../js/carousel_banner.js" defer></script>
+    <script src="../js/iphone.js"></script>
     <link rel="shortcut icon" href="assets/images/NguyenDucVu_241230896/" type="image/x-icon" />
     <title>BaiTapLonThietKeWeb</title>
 </head>
@@ -20,7 +22,7 @@
         <header>
             <div class="higher-header">
                 <div class="header-logo">
-                    <a href="index.html"><img class="header-logo"
+                    <a href="../index.html"><img class="header-logo"
                             src="../assets/images/NguyenDucVu_241230896/header_image/page_logo.png"
                             alt="page logo" /></a>
                 </div>
@@ -33,7 +35,7 @@
                     <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
                 </div>
                 <div class="login-icon">
-                    <a href="./account.html">
+                    <a href="">
                         <img src="../assets/images/NguyenDucVu_241230896/header_image/login-icon.png" alt="login icon"
                             id="login-icon-img" />
                     </a>
@@ -46,8 +48,8 @@
                     <i class="fa-solid fa-bars menu-btn" style="color: #ffffff"></i>
                     <div class="drop-down-menu-for-mobile">
                         <ul class="menu-mobile">
-                            <li><a href="" class="menu-mobile-link">Trang chủ</a></li>
-                            <li><a href="" class="menu-mobile-link">iPhone</a></li>
+                            <li><a href="../index.html" class="menu-mobile-link">Trang chủ</a></li>
+                            <li><a href="./iphone.html" class="menu-mobile-link">iPhone</a></li>
                             <li><a href="./iPad.html" class="menu-mobile-link">iPad</a></li>
                             <li><a href="./Mac.html" class="menu-mobile-link">Mac</a></li>
                             <li><a href="./watch.html" class="menu-mobile-link">Watch</a></li>
@@ -65,7 +67,7 @@
             </div>
             <div class="header-navbar-for-desktop">
                 <ul class="top-menu-not-mobile">
-                    <li class="category-menu-items"><a href="">iPhone</a></li>
+                    <li class="category-menu-items"><a href="./iphone.html">iPhone</a></li>
                     <li class="category-menu-items"><a href="./iPad.html">iPad</a></li>
                     <li class="category-menu-items"><a href="./Mac.html">Mac</a></li>
                     <li class="category-menu-items"><a href="./watch.html">Watch</a></li>
@@ -120,7 +122,11 @@
                 </div>
             </div>
             <!-- Code vao day -->
-            <div class="page-content"> 
+            <div class="page-content">
+
+                <div class="products-container">
+                    
+                </div>
             </div>
             <!-- Ket thuc code -->
         </div>
