--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
         </div>
         <div class="login-icon">
-          <a href="./pages/account.html">
+          <a href="">
             <img src="./assets/images/NguyenDucVu_241230896/header_image/login-icon.png" alt="login icon"
               id="login-icon-img" />
           </a>
@@ -45,8 +45,8 @@
           <i class="fa-solid fa-bars menu-btn" style="color: #ffffff"></i>
           <div class="drop-down-menu-for-mobile">
             <ul class="menu-mobile">
-              <li><a href="" class="menu-mobile-link">Trang chủ</a></li>
-              <li><a href="" class="menu-mobile-link">iPhone</a></li>
+              <li><a href="./index.html" class="menu-mobile-link">Trang chủ</a></li>
+              <li><a href="./pages/iphone.html" class="menu-mobile-link">iPhone</a></li>
               <li><a href="./pages/iPad.html" class="menu-mobile-link">iPad</a></li>
               <li><a href="./pages/Mac.html" class="menu-mobile-link">Mac</a></li>
               <li><a href="./pages/watch.html" class="menu-mobile-link">Watch</a></li>
@@ -64,13 +64,13 @@
       </div>
       <div class="header-navbar-for-desktop">
         <ul class="top-menu-not-mobile">
-          <li class="category-menu-items"><a href="">iPhone</a></li>
-          <li class="category-menu-items"><a href="pages/iPad.html">iPad</a></li>
-          <li class="category-menu-items"><a href="pages/Mac.html">Mac</a></li>
-          <li class="category-menu-items"><a href="pages/watch.html">Watch</a></li>
+          <li class="category-menu-items"><a href="./pages/iphone.html">iPhone</a></li>
+          <li class="category-menu-items"><a href="./pages/iPad.html">iPad</a></li>
+          <li class="category-menu-items"><a href="./pages/Mac.html">Mac</a></li>
+          <li class="category-menu-items"><a href="./pages/watch.html">Watch</a></li>
           <li class="category-menu-items"><a href="./pages/phu_kien.html">Phụ kiện</a></li>
           <li class="category-menu-items"><a href="./pages/earphone.html"">Âm thanh</a></li>
-          <li class=" category-menu-items"><a href="./pages/camera.html">Camera</a></li>
+          <li class="category-menu-items"><a href="./pages/camera.html">Camera</a></li>
           <li class="category-menu-items"><a href="./pages/giadung.html">Gia dụng</a></li>
           <li class="category-menu-items"><a href="./pages/tintuc.html">Tin tức</a></li>
         </ul>
@@ -146,7 +146,7 @@
                 alt="" class="item-image" />
               <h3 class="item-name">iPhone 17 Pro</h3>
               <p class="item-price">34.799.000 VNĐ</p>
-              <a href=""><button>Chi tiết</button></a>
+              <a href="./pages/product.html?id=iphone17-pro"><button>Chi tiết</button></a>
             </div>
             <div class="itembox">
               <div class="product-tag">
@@ -156,122 +156,146 @@
                 class="item-image" />
               <h3 class="item-name">iPhone 17</h3>
               <p class="item-price">24.999.000 VNĐ</p>
+              <a href="./pages/product.html?id=iphone17"><button>Chi tiết</button></a>
+            </div>
+            <div class="itembox">
+              <div class="product-tag">
+                <img src="./assets/images/NguyenDucVu_241230896/product_image/Product_tag/new_tag.png" alt="" />
+              </div>
+              <img src="./assets/images/NguyenDucVu_241230896/product_image/iPhone_image/iphone-air-black.png" alt=""
+                class="item-image" />
+              <h3 class="item-name">iPhone Air</h3>
+              <p class="item-price">30.990.000</p>
+              <a href="./pages/product.html?id=iphone-air"><button>Chi tiết</button></a>
+            </div>
+          </div>
+          <a href="./pages/iphone.html" class="show-all-btn">Xem thêm iPhone</a>
+        </div>
+        <div class="category-list">
+          <h2 class="category-title">iPad mới</h2>
+          <div class="item-list">
+            <div class="itembox">
+              <div class="product-tag">
+                <img src="./assets/images/NguyenDucVu_241230896/product_image/Product_tag/new_tag.png" alt="" />
+              </div>
+              <img src="./assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_pro(M5)/0051114_ipad-pro-m5-11-inch-wi-fi-cellular-256gb_240.jpeg" alt="" class="item-image" />
+              <h3 class="item-name">iPad Pro M5 11 inch</h3>
+              <p class="item-price">29.999.000đ</p>
               <a href=""><button>Chi tiết</button></a>
             </div>
             <div class="itembox">
               <div class="product-tag">
                 <img src="./assets/images/NguyenDucVu_241230896/product_image/Product_tag/new_tag.png" alt="" />
               </div>
-              <img src="./assets/images/NguyenDucVu_241230896/product_image/iPhone_image/iphone-air-tim.png" alt=""
-                class="item-image" />
-              <h3 class="item-name">iPhone Air</h3>
-              <p class="item-price">30.990.000</p>
+              <img src="./assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_pro(M5)/0051209_ipad-pro-m5-13-inch-wi-fi-256gb_240.jpeg" alt="" class="item-image" />
+              <h3 class="item-name">iPad Pro M5 13 inch</h3>
+              <p class="item-price">39.999.000đ</p>
+              <a href=""><button>Chi tiết</button></a>
+            </div>
+            <div class="itembox">
+              <div class="product-tag">
+                <img src="./assets/images/NguyenDucVu_241230896/product_image/Product_tag/new_tag.png" alt="" />
+              </div>
+              <img src="./assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_pro_(M4)/0025626_ipad-pro-m4-13-inch-wi-fi-cellular_240.jpeg" alt="" class="item-image" />
+              <h3 class="item-name">iPad Pro M4 13 inch</h3>
+              <p class="item-price">33.690.000đ</p>
+              <a href=""><button>Chi tiết</button></a>
+            </div>
+            <div class="itembox">
+              <div class="product-tag">
+                <img src="./assets/images/NguyenDucVu_241230896/product_image/Product_tag/new_tag.png" alt="" />
+              </div>
+              <img src="./assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_Air (M3)/0035136_ipad-air-m3-13-inch-wi-fi_240.png" alt="" class="item-image" />
+              <h3 class="item-name">iPad Air M3 13 inch</h3>
+              <p class="item-price">22.990.000đ</p>
               <a href=""><button>Chi tiết</button></a>
             </div>
           </div>
-          <a href="" class="show-all-btn">Xem thêm iPhone</a>
-        </div>
-        <div class="category-list">
-          <h2 class="category-title">iPad mới</h2>
-          <div class="item-list">
-            <div class="itembox">
-              <div class="product-tag"></div>
-              <img src="" alt="" class="item-image" />
-              <h3 class="item-name"></h3>
-              <p class="item-price"></p>
-              <a href=""><button>Chi tiết</button></a>
-            </div>
-            <div class="itembox">
-              <div class="product-tag"></div>
-              <img src="" alt="" class="item-image" />
-              <h3 class="item-name"></h3>
-              <p class="item-price"></p>
-              <a href=""><button>Chi tiết</button></a>
-            </div>
-            <div class="itembox">
-              <div class="product-tag"></div>
-              <img src="" alt="" class="item-image" />
-              <h3 class="item-name"></h3>
-              <p class="item-price"></p>
-              <a href=""><button>Chi tiết</button></a>
-            </div>
-            <div class="itembox">
-              <div class="product-tag"></div>
-              <img src="" alt="" class="item-image" />
-              <h3 class="item-name"></h3>
-              <p class="item-price"></p>
-              <a href=""><button>Chi tiết</button></a>
-            </div>
-          </div>
-          <a href="" class="show-all-btn">Xem thêm iPad</a>
+          <a href="./pages/iPad.html" class="show-all-btn">Xem thêm iPad</a>
         </div>
         <div class="category-list">
           <h2 class="category-title">Mac mới</h2>
           <div class="item-list">
             <div class="itembox">
-              <div class="product-tag"></div>
-              <img src="" alt="" class="item-image" />
-              <h3 class="item-name"></h3>
-              <p class="item-price"></p>
+              <div class="product-tag">
+                <img src="./assets/images/NguyenDucVu_241230896/product_image/Product_tag/new_tag.png" alt="" />
+              </div>
+              <img src="./assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/MacBook Pro M5/0051653_macbook-pro-14-inch-m5-2025-10-core-gpu-10-core-cpu-16gb-ram-512gb-ssd_240.png" alt="" class="item-image" />
+              <h3 class="item-name">Mac Pro M5 14 inch</h3>
+              <p class="item-price">41.999.000đ</p>
               <a href=""><button>Chi tiết</button></a>
             </div>
             <div class="itembox">
-              <div class="product-tag"></div>
-              <img src="" alt="" class="item-image" />
-              <h3 class="item-name"></h3>
-              <p class="item-price"></p>
+              <div class="product-tag">
+                <img src="./assets/images/NguyenDucVu_241230896/product_image/Product_tag/new_tag.png" alt="" />
+              </div>
+              <img src="./assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/MacBook Air M4/0036194_macbook-air-m4-15-inch-10-core-gpu-16gb-ram-256gb-ssd_240.jpeg" alt="" class="item-image" />
+              <h3 class="item-name">Mac Air M4 15 inch</h3>
+              <p class="item-price">29.290.000đ</p>
               <a href=""><button>Chi tiết</button></a>
             </div>
             <div class="itembox">
-              <div class="product-tag"></div>
-              <img src="" alt="" class="item-image" />
-              <h3 class="item-name"></h3>
-              <p class="item-price"></p>
+              <div class="product-tag">
+                <img src="./assets/images/NguyenDucVu_241230896/product_image/Product_tag/new_tag.png" alt="" />
+              </div>
+              <img src="./assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/Mac mini/0011564_mac-mini-m2-10-core-gpu-8gb-ram-256gb-ssd_240.jpeg" alt="" class="item-image" />
+              <h3 class="item-name">Mac Mini M2 (8GB Ram | 256GB SSD)</h3>
+              <p class="item-price">14.950.000đ</p>
               <a href=""><button>Chi tiết</button></a>
             </div>
             <div class="itembox">
-              <div class="product-tag"></div>
-              <img src="" alt="" class="item-image" />
-              <h3 class="item-name"></h3>
-              <p class="item-price"></p>
+              <div class="product-tag">
+                <img src="./assets/images/NguyenDucVu_241230896/product_image/Product_tag/new_tag.png" alt="" />
+              </div>
+              <img src="./assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/iMac/0034200_imac-m4-2024-24-inch-10-core-gpu16gb256gb-nano-texture-glass_240.jpeg" alt="" class="item-image" />
+              <h3 class="item-name">iMac M4 2024 - 24 inch</h3>
+              <p class="item-price">42.990.000đ</p>
               <a href=""><button>Chi tiết</button></a>
             </div>
           </div>
-          <a href="" class="show-all-btn">Xem thêm Mac</a>
+          <a href="./pages/Mac.html" class="show-all-btn">Xem thêm Mac</a>
         </div>
         <div class="category-list">
           <h2 class="category-title">Watch mới</h2>
           <div class="item-list">
             <div class="itembox">
-              <div class="product-tag"></div>
-              <img src="" alt="" class="item-image" />
-              <h3 class="item-name"></h3>
-              <p class="item-price"></p>
+              <div class="product-tag">
+                <img src="./assets/images/NguyenDucVu_241230896/product_image/Product_tag/new_tag.png" alt="" />
+              </div>
+              <img src="./assets/images/NguyenKimTuyen_241230888/Product_images/Watch/Watch Ultra/watch_ultra_3.jpeg" alt="" class="item-image" />
+              <h3 class="item-name">Apple Watch Ultra 3 GPS + Cellular 49mm</h3>
+              <p class="item-price">23.999.000đ</p>
               <a href=""><button>Chi tiết</button></a>
             </div>
             <div class="itembox">
-              <div class="product-tag"></div>
-              <img src="" alt="" class="item-image" />
-              <h3 class="item-name"></h3>
-              <p class="item-price"></p>
+              <div class="product-tag">
+                <img src="./assets/images/NguyenDucVu_241230896/product_image/Product_tag/new_tag.png" alt="" />
+              </div>
+              <img src="./assets/images/NguyenKimTuyen_241230888/Product_images/Watch/Watch series 11/series_11_titan_gold.jpeg" alt="" class="item-image" />
+              <h3 class="item-name">Apple Watch Series 11 Titan vàng</h3>
+              <p class="item-price">22.499.000đ</p>
               <a href=""><button>Chi tiết</button></a>
             </div>
             <div class="itembox">
-              <div class="product-tag"></div>
-              <img src="" alt="" class="item-image" />
-              <h3 class="item-name"></h3>
-              <p class="item-price"></p>
+              <div class="product-tag">
+                <img src="./assets/images/NguyenDucVu_241230896/product_image/Product_tag/new_tag.png" alt="" />
+              </div>
+              <img src="./assets/images/NguyenKimTuyen_241230888/Product_images/Watch/Watch SE/SE.jpeg" alt="" class="item-image" />
+              <h3 class="item-name">Apple Watch SE GPS 2024 Sport Band size M/L</h3>
+              <p class="item-price">5.690.000đ</p>
               <a href=""><button>Chi tiết</button></a>
             </div>
             <div class="itembox">
-              <div class="product-tag"></div>
-              <img src="" alt="" class="item-image" />
-              <h3 class="item-name"></h3>
-              <p class="item-price"></p>
+              <div class="product-tag">
+                <img src="./assets/images/NguyenDucVu_241230896/product_image/Product_tag/new_tag.png" alt="" />
+              </div>
+              <img src="./assets/images/NguyenKimTuyen_241230888/Product_images/Watch/Watch series 10/series_10_nhom_den.png" alt="" class="item-image" />
+              <h3 class="item-name">Apple Watch Series 10 Nhôm Đen GPS + Cellular</h3>
+              <p class="item-price">13.590.000đ</p>
               <a href=""><button>Chi tiết</button></a>
             </div>
           </div>
-          <a href="" class="show-all-btn">Xem thêm Watch</a>
+          <a href="./pages/watch.html" class="show-all-btn">Xem thêm Watch</a>
         </div>
         <img src="assets/images/NguyenDucVu_241230896/page_img/1.jpeg" alt="" class="decor-image" />
         <div class="main-page-newsfeed">
