fix: news link css

--- a/pages/tintuc.html
+++ b/pages/tintuc.html
@@ -4,17 +4,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="../../styles/NguyenDucVu_241230896/header_and_footer.css" />
-  <link rel="stylesheet" href="../../styles/NguyenDucVu_241230896/carousel_banner.css" />
-  <link rel="stylesheet" href="../../styles/NguyenDucVu_241230896/main_content.css" />
-  <link rel="stylesheet" href="../../styles/LeQuyTung_241230886/tintuc.css" />
+  <link rel="stylesheet" href="../styles/NguyenDucVu_241230896/header_and_footer.css" />
+  <link rel="stylesheet" href="../styles/NguyenDucVu_241230896/carousel_banner.css" />
+  <link rel="stylesheet" href="../styles/NguyenDucVu_241230896/main_content.css" />
+  <link rel="stylesheet" href="../styles/LeQuyTung_241230886/tintuc.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
     integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <script src="https://kit.fontawesome.com/9e100b4052.js" crossorigin="anonymous"></script>
   <script src="../js/header_and_footer.js" defer></script>
   <script src="./js/carousel_banner.js" defer></script>
-  <link rel="shortcut icon" href="../../assets/images/NguyenDucVu_241230896/" type="image/x-icon" />
+  <link rel="shortcut icon" href="../assets/images/NguyenDucVu_241230896/" type="image/x-icon" />
   <title>BaiTapLonThietKeWeb</title>
 </head>
 
@@ -88,7 +88,7 @@
       <div class="top-news">
         <div class="bignew">
           <a href="#">
-            <img src="../../assets/images/LeQuyTung_241230886/tinucpage/bigimg.jpeg" alt="anh to" />
+            <img src="../assets/images/LeQuyTung_241230886/tinucpage/bigimg.jpeg" alt="anh to" />
           </a>
           <div class="topnews-thumpnail">
             <a href="#">Những dòng lens chụp phong cảnh Fujifilm dưới 20 triệu đồng
@@ -98,7 +98,7 @@
         <div class="normal-section">
           <div class="normalnews">
             <a href="#">
-              <img src="../../assets/images/LeQuyTung_241230886/tinucpage/normalimg1.jpeg" alt="anh nho 1" />
+              <img src="../assets/images/LeQuyTung_241230886/tinucpage/normalimg1.jpeg" alt="anh nho 1" />
             </a>
             <div class="topnews-thumpnail">
               Top 3 lens chân dung Fujifilm dưới 20 triệu đáng tiền nhất
@@ -106,7 +106,7 @@
           </div>
           <div class="normalnews">
             <a href="#">
-              <img src="../../assets/images/LeQuyTung_241230886/tinucpage/normalimg2.jpeg" alt="anh nho 2" />
+              <img src="../assets/images/LeQuyTung_241230886/tinucpage/normalimg2.jpeg" alt="anh nho 2" />
             </a>
             <div class="topnews-thumpnail">
               Cách chụp ảnh chân dung xóa phông xa5 đẹp tự nhiên
@@ -580,7 +580,7 @@
     <footer>
       <div class="footer-wrapper">
         <div class="footer-about">
-          <img src="../../assets/images/NguyenDucVu_241230896/header_image/page_logo.png" alt="ShopDunk Logo"
+          <img src="../assets/images/NguyenDucVu_241230896/header_image/page_logo.png" alt="ShopDunk Logo"
             class="footer-logo" />
           <p>
             Năm 2020, DucVu Team trở thành đại lý ủy quyền của Apple. Chúng
